@@ -1,5 +1,7 @@
 2008-02-28  Kenichi Handa  <handa@ni.aist.go.jp>
 
+	* ftfont.c (ftfont_match): Explicitly set pixelsize in pattern.
+
 	* xdisp.c (display_mode_element): Cancel the previous change.
 	(decode_mode_spec): Likewise.
 	(handle_auto_composed_prop): Don't make composition if it->string
